removed css causing spacing issues

--- a/src/components/store/CollectionSlider/style.module.scss
+++ b/src/components/store/CollectionSlider/style.module.scss
@@ -37,8 +37,6 @@
 
     .card {
       flex: none;
-      max-width: calc(100vw - 6rem);
-      width: 25rem;
     }
   }
 }
