--- a/src/styles/pages/store/collections.module.scss
+++ b/src/styles/pages/store/collections.module.scss
@@ -41,7 +41,5 @@
 
   .card {
     flex: none;
-    max-width: calc(100vw - 6rem);
-    width: 25rem;
   }
 }
